tooling/nargo_cli/tests/snapshots/execution_success/cast_to_u64_regression_7776/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: Field, b: bool) -> pub u64 {
    let c: Field = b as Field;
    let res: Field = a - c;
    res as u64
}
