tooling/nargo_cli/tests/snapshots/execution_success/cast_to_u64_regression_7776/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field, v1: u1):
    (no terminator instruction)
}
[cast_to_u64_regression_7776] Circuit output: 4891460686036598784
